[gd_scene load_steps=2 format=3 uid="uid://bb0uj6at5vjmi"]

[ext_resource type="Script" uid="uid://da6ht637o1k4t" path="res://UI/debug_stats.gd" id="1_flxmr"]

[node name="DebugStats" type="CanvasLayer"]
script = ExtResource("1_flxmr")

[node name="foodbutton" type="Button" parent="."]
offset_left = 38.0
offset_top = 807.0
offset_right = 132.0
offset_bottom = 907.0
text = "GIVE 
FOOD"

[node name="+hunger" type="Button" parent="."]
offset_left = 38.0
offset_top = 916.0
offset_right = 131.0
offset_bottom = 948.0
text = "+ hunger"

[node name="- hunger" type="Button" parent="."]
offset_left = 39.0
offset_top = 958.0
offset_right = 132.0
offset_bottom = 990.0
text = "- hunger"

[node name="playbutton" type="Button" parent="."]
offset_left = 162.0
offset_top = 807.0
offset_right = 256.0
offset_bottom = 907.0
text = "PLAY"

[node name="+fun" type="Button" parent="."]
offset_left = 160.0
offset_top = 916.0
offset_right = 253.0
offset_bottom = 948.0
text = "+ fun"

[node name="-fun" type="Button" parent="."]
offset_left = 160.0
offset_top = 957.0
offset_right = 253.0
offset_bottom = 989.0
text = "- fun"

[node name="walkbutton" type="Button" parent="."]
offset_left = 284.0
offset_top = 807.0
offset_right = 383.0
offset_bottom = 907.0
text = "GO FOR 
WALK"

[node name="+ energy" type="Button" parent="."]
offset_left = 287.0
offset_top = 917.0
offset_right = 380.0
offset_bottom = 949.0
text = "+ energy"

[node name="- energy" type="Button" parent="."]
offset_left = 288.0
offset_top = 955.0
offset_right = 381.0
offset_bottom = 987.0
text = "- energy"

[node name="showerbutton" type="Button" parent="."]
offset_left = 415.0
offset_top = 807.0
offset_right = 509.0
offset_bottom = 907.0
text = "SHOWER"

[node name="time+1m" type="Button" parent="."]
offset_left = 432.0
offset_top = 149.0
offset_right = 519.0
offset_bottom = 180.0
text = "+1 minute"

[node name="time+5m" type="Button" parent="."]
offset_left = 420.0
offset_top = 194.0
offset_right = 518.0
offset_bottom = 225.0
text = "+ 5 minutes"

[node name="time+30m" type="Button" parent="."]
offset_left = 410.0
offset_top = 238.0
offset_right = 518.0
offset_bottom = 269.0
text = "+ 30 minutes"

[node name="time+1h" type="Button" parent="."]
offset_left = 444.0
offset_top = 283.0
offset_right = 516.0
offset_bottom = 314.0
text = "+ 1 hour"

[node name="time+5h" type="Button" parent="."]
offset_left = 435.0
offset_top = 330.0
offset_right = 515.0
offset_bottom = 361.0
text = "+ 5 hours"

[connection signal="pressed" from="foodbutton" to="." method="_on_foodbutton_pressed"]
[connection signal="pressed" from="+hunger" to="." method="_on_add_hunger_pressed"]
[connection signal="pressed" from="- hunger" to="." method="_on_remove_hunger_pressed"]
[connection signal="pressed" from="playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="pressed" from="+fun" to="." method="_on_add_fun_pressed"]
[connection signal="pressed" from="-fun" to="." method="_on_remove_fun_pressed"]
[connection signal="pressed" from="walkbutton" to="." method="_on_walkbutton_pressed"]
[connection signal="pressed" from="+ energy" to="." method="_on_add_energy_pressed"]
[connection signal="pressed" from="- energy" to="." method="_on_remove_energy_pressed"]
[connection signal="pressed" from="showerbutton" to="." method="_on_showerbutton_pressed"]
[connection signal="pressed" from="time+1m" to="." method="_on_time_1m_pressed"]
[connection signal="pressed" from="time+5m" to="." method="_on_time_5m_pressed"]
[connection signal="pressed" from="time+30m" to="." method="_on_time_30m_pressed"]
[connection signal="pressed" from="time+1h" to="." method="_on_time_1h_pressed"]
[connection signal="pressed" from="time+5h" to="." method="_on_time_1h_pressed"]
